--- a/tweets/templates/profile.html
+++ b/tweets/templates/profile.html
@@ -1,6 +1,6 @@
 {% if user.is_authenticated %}
 <h1>Tweets account page</h1>
-<h2>@{{ user.username }}!</h2>
+<h2>@{{ user.username }}</h2>
 
 
 <form action="/tweets/add/" method="POST">
